chore: configure #61 auto-generate openapi spec with swagger-autogen
